# tech-pubs-ai

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md  init-wizard.md  pyproject.toml  test.sh  ui-design.md  wizard-edit.md
.claude/PRPs/plans/: wizard-phase1-database-models.plan.md
.claude/PRPs/plans/completed/: aerodocs-embedded-wizard.plan.md  aerodocs-expanded-sidebar-filters.plan.md  aerodocs-model-sidebar-filter.plan.md  aerodocs-page-shell-document-list.plan.md  aerodocs-search-sort.plan.md  aerodocs-sidebar-filters.plan.md  wizard-phase2-api-endpoints.plan.md  wizard-phase3-wizard-ui.plan.md  wizard-phase4-admin-integration.plan.md  wizard-phase5-polish-qa.plan.md  wizard-reduce-steps-phase1.plan.md  wizard-reduce-steps-phase2.plan.md
.claude/PRPs/prds/: aerodocs-document-browser.prd.md  document-filter-wizard.prd.md  wizard-reduce-steps.prd.md
.claude/PRPs/reports/: aerodocs-embedded-wizard-report.md  aerodocs-expanded-sidebar-filters-report.md  aerodocs-model-sidebar-filter-report.md  aerodocs-page-shell-document-list-report.md  aerodocs-search-sort-report.md  aerodocs-sidebar-filters-report.md  wizard-phase1-database-models-report.md  wizard-phase2-api-endpoints-report.md  wizard-phase3-wizard-ui-report.md  wizard-phase4-admin-integration-report.md  wizard-phase5-polish-qa-report.md  wizard-reduce-steps-phase1-report.md  wizard-reduce-steps-phase2-report.md
app/api/: .env.example  README.md  config.py  main.py  pyproject.toml
app/api/routers/: aircraft_models.py  categories.py  chunks.py  document_categories.py  documents.py  jobs.py  platforms.py  search.py  uploads.py
app/api/schemas/: aircraft_models.py  categories.py  chunks.py  document_categories.py  document_types.py  documents.py  generations.py  jobs.py  platforms.py  search.py  uploads.py
app/api/services/: azure_storage.py  cache_service.py  queue_service.py  summarization_service.py
app/api/services/search_agent/: __init__.py  agent.py  dependencies.py  tools.py
app/ui/: README.md  package-lock.json  package.json
app/ui/src/app/: layout.tsx  page.tsx
app/ui/src/app/(public)/: page.tsx
app/ui/src/app/(public)/search/: page.tsx
app/ui/src/app/admin/: layout.tsx  page.tsx
app/ui/src/app/admin/documents/: page.tsx
app/ui/src/app/search/: page.tsx
app/ui/src/app/wizard/: page.tsx
app/ui/src/components/admin/: AdminNavbar.tsx
app/ui/src/components/browser/: BrowseDocumentTable.tsx  ContentHeader.tsx  DocumentCard.tsx  DocumentCardGrid.tsx  Pagination.tsx  Sidebar.tsx  TopBar.tsx
app/ui/src/components/chunks/: ChunksTable.tsx
app/ui/src/components/documents/: DocumentStatusIndicator.tsx  DocumentsList.tsx  DocumentsTable.tsx  EditDocumentModal.tsx
app/ui/src/components/jobs/: ChildJobsTable.tsx  JobProgressIndicator.tsx  JobStatusBadge.tsx  JobsFilter.tsx  JobsMonitor.tsx  JobsTable.tsx
app/ui/src/components/layout/: PublicHeader.tsx
app/ui/src/components/pdf/: DocumentViewerContainer.tsx  PdfViewer.tsx  SinglePageView.tsx
app/ui/src/components/search/: SearchContainer.tsx  SearchInput.tsx  SearchResultCard.tsx  SearchResults.tsx
app/ui/src/components/ui/: ConfirmDialog.tsx  DropdownMenu.tsx
app/ui/src/components/upload/: FileUploader.tsx  SerialRangeEditor.tsx  UploadDropzone.tsx  UploadProgress.tsx
app/ui/src/components/wizard/: CategorySelector.tsx  GenerationSelector.tsx  PlatformSelector.tsx  StepIndicator.tsx  TypeSelector.tsx  WizardContainer.tsx  WizardResults.tsx
app/ui/src/lib/: formatters.ts  search-cache.ts
app/ui/src/lib/api/: aircraft-models.ts  categories.ts  chunks.ts  client.ts  documents.ts  jobs.ts  search.ts  server.ts  uploads.ts  wizard.ts
app/ui/src/types/: aircraft-models.ts  chunks.ts  documents.ts  jobs.ts  search.ts  uploads.ts  wizard.ts
database/: .env.example  README.md
database/migrations/: 001_initial_schema.sql  002_add_blob_path.sql  003_add_aircraft_models.sql  V10__add_search_cache.sql  V1__baseline.sql  V2__split_ingestion_jobs.sql  V3__add_chapter_title.sql  V4__add_serial_number_ranges.sql  V4__add_wizard_tables.sql  V6__serial_numbers_varchar.sql  V7__add_total_token_count.sql  V8__update_embedding_dimension.sql  V9__add_embedding_model_column.sql
design/: aerodocs-component-template.tsx  aerodocs-component-template.tsx:Zone.Identifier  aerodocs-ui-reference.md  aerodocs-ui-reference.md:Zone.Identifier
doc/: personas.md
infrastructure/: .terraform.lock.hcl  database.tf  main.tf  openai.tf  outputs.tf  provider.tf  variables.tf
jobs/base/: Dockerfile
jobs/document-chunking/: .env.example  Dockerfile  main.py  pyproject.toml
jobs/document-chunking/tests/: test.py
jobs/document-embedding/: .env.example  Dockerfile  main.py  pyproject.toml
jobs/document-ingestion/: Dockerfile  README.md  main.py  pyproject.toml
(+24 files in other folders)
