[project]
name = "document-ingestion"
version = "0.1.0"
description = "Azure Container App Job for processing documents from blob storage"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.19.0",
    "azure-storage-blob>=12.24.0",
    "azure-storage-queue>=12.0.0",
    "docling>=2.0",
    "techpubs-core[embeddings]",
]

[tool.uv.sources]
techpubs-core = { workspace = true }
